# contracts

./: .gitignore  Cargo.toml  Makefile  README.md  skills-lock.json
contracts/market/: Cargo.toml  README.md
contracts/market-factory/: Cargo.toml
contracts/market-factory/src/: lib.rs  test.rs
contracts/market-factory/test_snapshots/test/: test_create_market_rejects_disabled_irm.1.json  test_create_market_rejects_disabled_lltv.1.json  test_create_market_rejects_same_asset.1.json  test_irm_registry_roundtrip.1.json  test_lltv_registry_roundtrip.1.json  test_market_id_is_deterministic_and_param_sensitive.1.json
contracts/market/src/: errors.rs  lib.rs  test.rs  types.rs
contracts/market/test_snapshots/test/: test_authorization_roundtrip.1.json  test_authorized_operator_can_borrow_on_behalf.1.json  test_bad_debt_lowers_lender_share_price.1.json  test_borrow_basic.1.json  test_borrow_cap_enforced.1.json  test_borrow_exceeds_collateral_fails.1.json  test_borrow_insufficient_liquidity_fails.1.json  test_double_initialize_fails.1.json  test_health_factor_normalizes_mismatched_token_decimals.1.json  test_initialize_invalid_config_fails.1.json  test_initialize_success.1.json  test_interest_accrual_advances_indexes.1.json  test_interest_accrual_grows_totals.1.json  test_liquidate_bad_debt_socialized.1.json  test_liquidate_by_seized_assets.1.json  test_liquidate_deadline_expired.1.json  test_liquidate_full_repay_by_shares.1.json  test_liquidate_healthy_position_fails.1.json  test_liquidate_slippage_exceeded.1.json  test_liquidate_undercollateralized_succeeds.1.json  (+24 more)
(+173 files in other folders)
