[workspace]
resolver = "2"
members = [
  "contracts/*",
  "libs/*",
]

[workspace.dependencies]
soroban-sdk    = "25"
astrion-math   = { path = "libs/math" }
astrion-market-types = { path = "libs/market-types" }
stellar-tokens = "0.7.1"
stellar-access = "0.7.1"
stellar-macros = "0.7.1"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
